namespaces/edmee-logs/openobserve/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: openobserve
  namespace: edmee-logs
spec:
  clusterIP: None
  selector:
    app: openobserve
  ports:
  - name: http
    port: 5080
    targetPort: 5080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openobserve
  namespace: edmee-logs
  labels:
    name: openobserve
spec:
  serviceName: openobserve
  replicas: 1
  selector:
    matchLabels:
      name: openobserve
      app: openobserve
  template:
    metadata:
      labels:
        name: openobserve
        app: openobserve
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 10000
        runAsGroup: 3000
        runAsNonRoot: true
      containers:
        - name: openobserve
          image: harbor.infra.edmee.cloud/docker/openobserve/openobserve:v0.15.0
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 4096m
              memory: 2048Mi
            requests:
              cpu: 256m
              memory: 50Mi
          ports:
            - containerPort: 5080
              name: http
          volumeMounts:
          - name: data
            mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 20Gi
      storageClassName: rook-cephfs
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-edmee-net
  name: openobserve
  namespace: edmee-logs
spec:
  ingressClassName: nginx
  rules:
    - host: o2.infra.edmee.cloud
      http:
        paths:
          - backend:
              service:
                name: openobserve
                port:
                  number: 5080
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - o2.infra.edmee.cloud
      secretName: o2.infra.edmee.cloud-tls
